--- a/server/web/index.html
+++ b/server/web/index.html
@@ -19,6 +19,9 @@
       <button data-page="investments">Investments</button>
       <button data-page="settings">Settings</button>
     </nav>
+
+    <button id="themeToggle" class="icon-btn" title="Toggle dark mode" aria-label="Switch to dark">🌙</button>
+    
   </header>
 
   <div class="container">
